# rustaceans-rmm-complete

./: Cargo.toml  LICENSE  QUICK_START.md  README.md
deployment/: DEPLOYMENT_GUIDE.md  MANUAL_AWS_SETUP.md  aws-deployment-guide.md  aws-linux-setup.sh  aws-no-git-setup.sh  clean-simple-rmm-setup.sh  clean-update-ec2.sh  create-full-dashboard.sh  emergency-fix-ec2.sh  fix-aws-setup.sh  fix-database-errors.sh  git-setup-guide.sh  github-upgrade.sh  manual-full-console.sh  quick-aws-setup.sh  simple-vulnerability-setup.sh  standalone-aws-setup.sh  upgrade-to-full-console.sh
deployment/server/: Dockerfile  docker-compose.yml
deployment/windows/: build.ps1  demo-deployment.ps1  deploy-enterprise.ps1  install.ps1  quick-deploy.ps1  rmm-agent-with-scanning.ps1
src/: auth.rs  database.rs  main.rs  simple_server.rs  vulnerability_db.rs
src/agent/: communication.rs  config.rs  main.rs  scanner.rs  service.rs  system.rs
static/: app.js  index.html  login.html  style.css
