[package]
name = "rustaceans-security-rmm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }

[[bin]]
name = "simple-rmm-server"
path = "src/simple_server.rs"